--- a/views/administrador/formPresentarMuestra.pug
+++ b/views/administrador/formPresentarMuestra.pug
@@ -1,7 +1,7 @@
 .container
  form(action=`/admins/muestra?_method=put` method="post")
   input(type='hidden' name="OrdenId" value=orden.id)
-  input(type='hidden' name="PacienteId" value=paciente.id)
+  input(type='hidden' name="UsuarioId" value=usuario.id)
   .row.mt-4.justify-content-center
    .col-md-auto.d-flex.align-items-center
     table.table.card-text
