--- a/views/administrador2/menuLateralClickUsuario.pug
+++ b/views/administrador2/menuLateralClickUsuario.pug
@@ -3,13 +3,13 @@ aside(class="d-flex position-fixed vh-100" style="top: calc(var(--header-height)
   ul(class="bd-links-nav list-unstyled mb-0 pb-3 pb-md-2 pe-lg-2")
    if !usuario.Paciente
     li(class="nav-item")
-     button(type="button" class="btn btn-secondary w-100 py-2 btnEditar" id='btnRegPaciente' ) Registrar como paciente
+     button(type="button" class="btn  w-100 py-2 btnEditar" id='btnRegPaciente' ) Registrar como paciente
    if !usuario.Bioquimico
     li(class="nav-item")
-     button(type="button" class="btn btn-secondary w-100 py-2 btnEditar" id='btnRegBioquimico' ) Registrar como bioquímico
+     button(type="button" class="btn  w-100 py-2 btnEditar" id='btnRegBioquimico' ) Registrar como bioquímico
    
    if !usuario.Tecnico
     li(class="nav-item")
-     button(type="button" class="btn btn-secondary w-100 py-2 btnEditar" id='btnRegTecnico' ) Registrar como técnico
+     button(type="button" class="btn  w-100 py-2 btnEditar" id='btnRegTecnico' ) Registrar como técnico
    
      
