--- a/views/tecBioq/clickAddMuestra.pug
+++ b/views/tecBioq/clickAddMuestra.pug
@@ -1,12 +1,11 @@
 extends layout
-block aside 
+include ./formMuestra.pug
+append styles 
+      link(rel='stylesheet', href='/stylesheets/tecBioq/formularios.css')
 block content
-  //
-   if rtaCargarOrden 
-        include ./rtaCargarOrden.pug
-  .container.d-flex.flex-column(id="divLista" )
-    include ./formMuestra.pug
-    if error
-     .alert.alert-danger.alert-dismissible.fade.show(role="alert")= `${error}`
-      button(type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close")
-    +formMuestra("Enviar","http://localhost:3000/tecBioq/addMuestra")
+ div.container.mt-5(id="divContentLista" )
+  .row
+    .col-lg-6.d-flex.mx-auto 
+     +formMuestra("Enviar","http://localhost:3000/tecBioq/addMuestra")   
+
+
