--- a/views/tecBioq/listaDeterminaciones.pug
+++ b/views/tecBioq/listaDeterminaciones.pug
@@ -1,4 +1,5 @@
 .container.divLista
+ h1.form-div Determinaciones
  ul.list-group.list-group-flush
              each d in determinaciones
                li.list-group-item.list-group-item-action
