--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -5,9 +5,19 @@ body {
   font-family: "Lato",sans-serif;
   padding: 0;
   font-size: 14px;
-  line-height: 22px
+  line-height: 22px;
+/**
+  background-color: #EFEFEF;
+  background-color: #bad1f8;
+  background-color: #7087da;#1c2853
+*/
+
+  background-color: #1c2853;
 }
 
+main{
+  background-color: #1c2853;
+}
 
 
 .btnVerMas {
@@ -30,10 +40,7 @@ body {
 
 a{text-decoration: none;}
 
-.card:hover{
-  transform: scale(1.05); 
-  transition: transform 0.3s ease; 
-}
+
 
 .spanSearch{
   display: flex;
