--- a/public/stylesheets/tecbioq/formularios.css
+++ b/public/stylesheets/tecbioq/formularios.css
@@ -6,13 +6,14 @@
     align-items: baseline;
   }
   
+
   label{
   color: #333333; 
   font-weight: 700;
   margin-bottom: 5px;
   }
   
-  .form-div input{
+  .form-div input {
     text-align: right;
     border:0 ;
     outline: 0;
@@ -23,13 +24,13 @@
     width:80%;
   }
   
-  #selectMuestra{
+  #selectId{
     border: none;
     outline: none;
     appearance: none;
   }
   
-  #selectMuestra:focus {
+  #selectId:focus {
     outline: none ; /* Asegúrate de eliminar el contorno azul al enfocarlo */
     box-shadow: none ;/* En caso de que el navegador use un box-shadow */
   }
@@ -50,8 +51,9 @@
   input:disabled,
   input[readonly],
   .form-select:disabled {
-      background-color: #F8F9FA; 
-      color: black;
+      background-color: #E9ECEF;
+       color: #6C757D;
+       opacity: 0.7;
       cursor: not-allowed;
       outline: 0;
   }
@@ -60,3 +62,45 @@
     margin-top: 2rem;
   }
 
+
+
+  .divFormulario{
+    border-top: #261290 solid 0.5rem;
+     background-color: #F8F9FA;
+     padding:1.5rem 0.5rem;
+      box-shadow: 0 0 5px 1px rgba(0,0,0,0.65);
+  }
+
+
+@media (min-width: 1024px) { /* lg breakpoint */
+  .divFormulario {
+    padding: 1rem 5rem;
+  }
+}
+
+  form{
+    background-color: #F8F9FA;
+  }
+
+  select,input{
+     background-color: #F8F9FA !important;
+  }
+
+
+
+  /* ----------------------------------------------------------  lista de los select */
+
+  #containerUnidadesSeleccionadas{
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.containerOpsSeleccionadas div{
+    display: flex;
+    justify-content: center;
+     box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.1);
+    margin: 5px;
+    padding:1px;
+}
+
+p{margin-bottom: 5px;}
