--- a/views/administrador2/navTop.pug
+++ b/views/administrador2/navTop.pug
@@ -12,15 +12,8 @@ nav(class="navbar navbar-expand-lg bg-body-tertiary ")
                            aria-expanded="false" 
                            aria-label="Toggle navigation")
       span.navbar-toggler-icon 
-    div.collapse.navbar-collapse#navbarSupportedContent
-     ul.navbar-nav.ms-auto.mb-2.mb-lg-0
-      li.nav-item
-       a.nav-link.active.dropdown-toggle(aria-current="page" 
-                                         href="#"
-                                         role="button" 
-                                         data-bs-toggle="dropdown" 
-                                         aria-expanded="false"
-                                         ) Salir                               
+    div.collapse.navbar-collapse#navbarSupportedContent.d-flex.justify-content-end
+     include ../menu.pug                                
 
     div.collapse.navbar-collapse#navbarSupportedContent
      ul.navbar-nav.me-auto.mb-2.mb-lg-0
