--- a/views/login/index.pug
+++ b/views/login/index.pug
@@ -3,16 +3,16 @@ html
   head
     link(href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous")
     title= title
-    link(rel='stylesheet', href='/stylesheets/style.css')
+    link(rel='stylesheet', href='/stylesheets/login/style.css')
     link(rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css")
     script(src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" 
            integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" 
            crossorigin="anonymous")
     script(src="https://accounts.google.com/gsi/client")            
-  body
+  body.d-flex.justify-content-center.align-items-center.min-vh-100
     .container
-        .row.justify-content-center 
-            .col-5.card
+        .row.d-flex.justify-content-center 
+            .col-5.card.px-4(style="max-width: 400px;min-width: 290px")
                 .row.my-5 
                     .row.justify-content-md-center
                         .col.col-md-auto
@@ -38,22 +38,26 @@ html
                                         .col-auto.mt-3      
                                             input(type="text" class="form-control" id="dni" name="documento" placeholder="DNI")
                                 .row.justify-content-md-center
+                                  .col 
+                                   .row
                                     .col-auto.mt-3     
                                         label(for="user" class="col-form-label")
                                             if registro
                                                    | Usuario:
                                             else 
                                                 i(class="bi bi-person") 
-                                    .col-auto.mt-3                                           
+                                    .col.mt-3                                           
                                         input(type="text" id="user" class="form-control" name="nickName" placeholder="Nombre de usuario")
                                 .row.justify-content-md-center 
+                                 .col 
+                                   .row
                                     .col-auto.mt-4 
                                         label(class="form-label" for="pass" )
                                             if registro
                                                 | Contraseña:
                                             else
                                                 i(class="bi bi-key")
-                                    .col-auto.mt-3
+                                    .col.mt-3
                                         input(class="form-control" type="password" placeholder=registro?"Ingrese una contraseña":'Contraseña' name="pass" id="pass")
                                 if registro 
                                     .row.justify-content-md-center 
@@ -63,7 +67,14 @@ html
                                         .col-auto.mt-3
                                             input(class="form-control" type="password" placeholder="Repita la contraseña" id="pass2" name="pass2")
                                 .row.justify-content-md-center.mt-5#divMsgError   
-                                    .col 
+                                 .col.d-flex.justify-content-center
+                                         button.btn
+                                             if registro
+                                                 | Registrarme
+                                             else
+                                                 | Login
+                                .row.d-flex.justify-content-center.mt-5#divMsgError   
+                                    .col.d-flex.justify-content-center 
                                      div(id="g_id_onload"
                                          data-client_id="961283639807-dbu75hn2c1eckvf47ho7lltkhi7an950.apps.googleusercontent.com"
                                          data-auto_prompt="false"
@@ -75,12 +86,7 @@ html
                                          data-text="sign_in_with"
                                          data-shape="rectangular"
                                          data-logo_alignment="left")
-                                    .col.d-flex.justify-content-center
-                                        button( class="btn btn-outline-secondary ")
-                                            if registro
-                                                | Registrarme
-                                            else
-                                                | Login
+                                    
                                                 
                 if !registro
                     .row.my-3.my-5   
