--- a/views/tecBioq/addCategDet.pug
+++ b/views/tecBioq/addCategDet.pug
@@ -1,15 +1,20 @@
 extends layout
-block aside 
-    include ./menuLateralExamen.pug
-block content
-  //
-   if rtaCargarOrden 
-        include ./rtaCargarOrden.pug
-  include ./tablaCategDet.pug      
-  .container.d-flex.flex-column.divContent(id="divLista" )       
-   +tablaCategDet(false,"tabla1")
-   +tablaCategDet(true,"tabla2")
-   
+append styles 
+      link(rel='stylesheet', href='/stylesheets/tecBioq/formularios.css')
+      link(rel='stylesheet', href='/stylesheets/tecBioq/tablaAddCategDet.css')
+      link(rel='stylesheet', href='/stylesheets/inputDataList.css')
+include ./tablaCategDet2.pug
+block content  
+   .row.w-100.mx-0.justify-content-center
+    .col-lg-6
+     .row.gx-5
+      include ./menuLateralExamen.pug
+      .col.main.mt-md-3
+       .row.tablaConValoresExistentes
+        if categorias.length > 0
+         +tablaCategDet(false,"tabla1")
+       .row
+        +tablaCategDet(true,"tabla2")   
     
           
    
