--- a/views/tecBioq/clickAddDeterminacion.pug
+++ b/views/tecBioq/clickAddDeterminacion.pug
@@ -1,9 +1,9 @@
 extends layout
-block aside 
+include ./formDeterminacion.pug
+append styles 
+      link(rel='stylesheet', href='/stylesheets/tecBioq/formularios.css')
 block content
-  //
-   if rtaCargarOrden 
-        include ./rtaCargarOrden.pug
-  .container.d-flex.flex-column(id="divLista" )
-    include ./formDeterminacion.pug
-    +formDeterminacion("Enviar","http://localhost:3000/tecBioq/addDet")
+ div.container.mt-5(id="divContentLista" )
+   .row
+    .col-lg-6.d-flex.mx-auto 
+     +formDeterminacion("Enviar","http://localhost:3000/tecBioq/addDet")
