--- a/views/tecBioq/indexDeterminacion.pug
+++ b/views/tecBioq/indexDeterminacion.pug
@@ -1,7 +1,13 @@
 extends layout
-
+append styles 
+      link(rel='stylesheet', href='/stylesheets/tecBioq/inputSearch.css')
+      link(rel='stylesheet', href='/stylesheets/tecBioq/lista.css')
+include ./inputSearch.pug
 block content
- div(id="divContentLista" )
-  include ./inputSearch.pug
-  +inputSearch("/tecBioq/determinaciones","nombre/codigo/tag a buscar","Crear Determinación","http://localhost:3000/tecBioq/addDet")
-  include ./listaDeterminaciones.pug
+ div.container.mt-5(id="divContentLista" )
+  .row
+   .col-lg-6.d-flex.mx-auto 
+    +inputSearch("/tecBioq/determinaciones","nombre/codigo/tag a buscar","Crear Determinación","http://localhost:3000/tecBioq/addDet")
+  .row.mt-5
+   .col-lg-6.mx-auto
+    include ./listaDeterminaciones.pug
