--- a/views/tecBioq/listaMuestras.pug
+++ b/views/tecBioq/listaMuestras.pug
@@ -1,4 +1,5 @@
 .container.divLista
+ h1.form-div Muestras
  ul.list-group.list-group-flush
              each m in muestras
                li.list-group-item.list-group-item-action
