--- a/views/tecBioq/menuLateralDeterminacion.pug
+++ b/views/tecBioq/menuLateralDeterminacion.pug
@@ -1,6 +1,6 @@
-aside(class="d-flex position-fixed vh-100 " style="top: calc(var(--header-height));")
- nav(class="nav flex-column bg-light p-3" style="width: 240px;")
-  ul(class="bd-links-nav list-unstyled mb-0 pb-3 pb-md-2 pe-lg-2")
+aside(class="col flex-grow-0")
+ nav(class="nav flex-column bg-light navLateral")
+  ul(class="bd-links-nav list-unstyled")
    li(class="nav-item")
     a.nav-link.btnEditar(href="#ancla1")
      p Editar
